Bug 145974 - Scrollbar in Comment box appearing over text while typing
Summary: Scrollbar in Comment box appearing over text while typing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.2.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0.0.beta2 target:7.4.0 tar...
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2021-11-30 19:46 UTC by Rafael Lima
Modified: 2021-12-11 01:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen capture showing the problem (235.63 KB, video/mp4)
2021-11-30 19:46 UTC, Rafael Lima
Details
ODT file used in the video (23.95 KB, application/vnd.oasis.opendocument.text)
2021-11-30 19:48 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2021-11-30 19:46:53 UTC
Created attachment 176603 [details]
Screen capture showing the problem

In Writer, when we add a longer comment between two other comments a scrollbar appear in the comment box, which is a good thing. However, text is appearing below the scrollbar and becomes partially hidden until we exit the comment box.

This behavior is not a good experience while typing long comments, specially in pages with many comments where all of them have scrollbars. See the attached video with a demonstration of the problem.

What I think is going on is that when the scrollbar is shown, the width of the textbox containing the comment text is not updated to account for the scrollbar.
Comment 1 Rafael Lima 2021-11-30 19:48:07 UTC
Created attachment 176604 [details]
ODT file used in the video

This is the ODT file I used in the video so that other can try to replicate the problem.
Comment 2 Telesto 2021-12-01 12:49:35 UTC
Confirm
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ddc57169ac8d1de00403dbb09fef5221beaa0f3d
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

not in
Version: 7.0.0.0.beta1+ (x64)
Build ID: 2891e91a513520d68ea2b8c59c14335861a15253
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 3 Deep17 2021-12-07 04:39:41 UTC
Bisected with : bibisect-win64-7.2

commit 1d0e7a22bf2dd02aeac15934bb183a70390e7ae9
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Feb 27 11:29:04 2021 -0800

    source 3d9f5d21154f4a79df0a3ea4c2d3b6289a034d31

    source 3d9f5d21154f4a79df0a3ea4c2d3b6289a034d31


https://git.libreoffice.org/core/commit/3d9f5d21154f4a79df0a3ea4c2d3b6289a034d31

gerrit.libreoffice.org / core / 3d9f5d21154f4a79df0a3ea4c2d3b6289a034d31^! / .
commit 3d9f5d21154f4a79df0a3ea4c2d3b6289a034d31	[log]
author	Caolán McNamara <caolanm@redhat.com>	Fri Feb 26 16:53:00 2021 +0000
committer	Caolán McNamara <caolanm@redhat.com>	Sat Feb 27 20:13:03 2021 +0100
tree 6b3413db2f5f3ece0bf803084b46469a69052129
parent d87e95289363e95eec2c6603f248253e6c7598df [diff]

Adding CC: to Caolán McNamara <caolanm@redhat.com>
Comment 4 Commit Notification 2021-12-10 19:52:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/0b7fe09bef0ac324132528e1b93b7c4102f3e087

Resolves: tdf#145974 reduce the papersize by scrollbar thickness

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-12-10 19:52:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f40390d98f45e6cb19ad896dc30eff07f746942f

Resolves: tdf#145974 reduce the papersize by scrollbar thickness

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2021-12-10 20:01:08 UTC
should be good in trunk and 7-3 now, backport to 7-2 in gerrit
Comment 7 Commit Notification 2021-12-11 01:00:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/c1f939c454d844d7a5d59a87f6d20c61b54fcb61

Resolves: tdf#145974 reduce the papersize by scrollbar thickness

It will be available in 7.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.