Resolves: tdf#145974 reduce the papersize by scrollbar thickness

if scrollbar required and scrollbar isn't an overlay one

Change-Id: I839fd8c214febadb80f692b53dc156e251f506ce