sd/source/ui/annotations/annotationwindow.cxx
@@ -390,8 +390,13 @@ void AnnotationWindow::DoResize()
 
     if( aTextHeight > aHeight )
     {
-        // we need vertical scrollbars and have to reduce the width
-        aWidth -= mxVScrollbar->get_scroll_thickness();
+        const int nThickness = mxVScrollbar->get_scroll_thickness();
+        if (nThickness)
+        {
+            // we need vertical scrollbars and have to reduce the width
+            aWidth -= nThickness;
+            mpOutliner->SetPaperSize(rDevice.PixelToLogic(Size(aWidth, aHeight)));
+        }
         mxVScrollbar->set_vpolicy(VclPolicyType::ALWAYS);
     }
     else
